[gd_scene load_steps=9 format=2]

[ext_resource path="res://background/background.tscn" type="PackedScene" id=1]
[ext_resource path="res://bird/bird.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/ui.tscn" type="PackedScene" id=3]
[ext_resource path="res://level/controller.gd" type="Script" id=4]
[ext_resource path="res://effects/wind_spawner.gd" type="Script" id=5]
[ext_resource path="res://obstacle/spawner.tscn" type="PackedScene" id=6]
[ext_resource path="res://effects/wind_gust.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 768, 50 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )
bird_scene = ExtResource( 2 )

[node name="Background" parent="." instance=ExtResource( 1 )]
scroll_speed = 100

[node name="BirdCanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="Bird" parent="BirdCanvasLayer" instance=ExtResource( 2 )]
position = Vector2( 200, 275 )

[node name="EffectsCanvasLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="WindSpawner" type="Node2D" parent="EffectsCanvasLayer"]
script = ExtResource( 5 )
wind_effect_scene = ExtResource( 7 )
gusts_per_second = 5

[node name="TestWindGust" parent="EffectsCanvasLayer" instance=ExtResource( 7 )]
visible = false
line_segments = 30
trail_speed = 0.003

[node name="UICanvasLayer" type="CanvasLayer" parent="."]
layer = 4

[node name="UI" parent="UICanvasLayer" instance=ExtResource( 3 )]

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="DeathTrigger" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathTrigger"]
position = Vector2( 512, 650 )
shape = SubResource( 1 )

[node name="ObstacleSpawner" parent="." instance=ExtResource( 6 )]
position = Vector2( 1050, 0 )
max_y = 175

[node name="SpeedBoostTimer" type="Timer" parent="."]
wait_time = 10.5
one_shot = true
